test/bad/generics/def08.px

func f<A,B>(A x) B def
    return f(x)

print f(false)
